--- a/test-output/old/Default Suite/classes.html
+++ b/test-output/old/Default Suite/classes.html
@@ -11,18 +11,22 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateupdateteEmployee</td>
+<td>loginTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateGetEmployee</td>
+<td>Exclude Group </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateupdateEmployee</td>
 <td>Include Group </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>validatecreateEmployee</td>
 <td>Include Group </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>validateGetEmployee</td>
-<td>Exclude Group </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -33,12 +37,12 @@
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
 <td>&nbsp;</td>
 <td>setUp</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
