--- a/test-output/old/Default Suite/groups.html
+++ b/test-output/old/Default Suite/groups.html
@@ -1,3 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Include Group</td><td>EmployeeTest.validatecreateEmployee()[pri:1, instance:com.nisum.poc.TestNG.EmployeeTest@66a3ffec]<br/>EmployeeTest.validateupdateteEmployee()[pri:2, instance:com.nisum.poc.TestNG.EmployeeTest@66a3ffec]<br/>EmployeeTest.validateDeleteEmployee()[pri:3, instance:com.nisum.poc.TestNG.EmployeeTest@66a3ffec]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Exclude Group</td><td>EmployeeTest.validateGetEmployee()[pri:1, instance:com.nisum.poc.TestNG.EmployeeTest@4667ae56]<br/></td></tr>
+<tr><td>Include Group</td><td>EmployeeTest.validatecreateEmployee(java.lang.String)[pri:2, instance:com.nisum.poc.TestNG.EmployeeTest@4667ae56]<br/>EmployeeTest.validateDeleteEmployee()[pri:4, instance:com.nisum.poc.TestNG.EmployeeTest@4667ae56]<br/>EmployeeTest.validateupdateEmployee()[pri:3, instance:com.nisum.poc.TestNG.EmployeeTest@4667ae56]<br/></td></tr>
 </table>
