--- a/test-output/old/Default Suite/methods-alphabetical.html
+++ b/test-output/old/Default Suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95b478">  <td>20/05/08 17:35:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeTest.setUp()[pri:0, instance:com.nisum.poc.TestNG.EmployeeTest@66a3ffec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/05/08 17:35:16</td>   <td>3954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeTest.setUp()[pri:0, instance:com.nisum.poc.TestNG.EmployeeTest@66a3ffec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/05/08 17:35:17</td>   <td>4843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeTest.setUp()[pri:0, instance:com.nisum.poc.TestNG.EmployeeTest@66a3ffec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/05/08 17:35:17</td>   <td>4846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.validateDeleteEmployee()[pri:3, instance:com.nisum.poc.TestNG.EmployeeTest@66a3ffec]">validateDeleteEmployee</td> 
-  <td>main@230835489</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/05/08 17:35:12</td>   <td>603</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.validatecreateEmployee()[pri:1, instance:com.nisum.poc.TestNG.EmployeeTest@66a3ffec]">validatecreateEmployee</td> 
-  <td>main@230835489</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>20/05/08 17:35:16</td>   <td>3955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.validateupdateteEmployee()[pri:2, instance:com.nisum.poc.TestNG.EmployeeTest@66a3ffec]">validateupdateteEmployee</td> 
-  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>20/05/13 17:47:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.loginTest(java.lang.String, java.lang.String)[pri:5, instance:com.nisum.poc.TestNG.EmployeeTest@4667ae56]">loginTest</td> 
+  <td>main@1522311648</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>20/05/13 17:47:06</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.loginTest(java.lang.String, java.lang.String)[pri:5, instance:com.nisum.poc.TestNG.EmployeeTest@4667ae56]">loginTest</td> 
+  <td>main@1522311648</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>20/05/13 17:46:59</td>   <td>-7094</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EmployeeTest.setUp()[pri:0, instance:com.nisum.poc.TestNG.EmployeeTest@4667ae56]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1522311648</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>20/05/13 17:47:05</td>   <td>-1008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.validateDeleteEmployee()[pri:4, instance:com.nisum.poc.TestNG.EmployeeTest@4667ae56]">validateDeleteEmployee</td> 
+  <td>main@1522311648</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>20/05/13 17:47:00</td>   <td>-6251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.validateGetEmployee()[pri:1, instance:com.nisum.poc.TestNG.EmployeeTest@4667ae56]">validateGetEmployee</td> 
+  <td>main@1522311648</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>20/05/13 17:47:03</td>   <td>-2797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmployeeTest.validateupdateEmployee()[pri:3, instance:com.nisum.poc.TestNG.EmployeeTest@4667ae56]">validateupdateEmployee</td> 
+  <td>main@1522311648</td>   <td></td> </tr>
 </table>
